# Kakodas

./: Cargo.toml  index.html
css/: dream_add.css  dream_edit.css  index.css  loading.css  login.css  not_found.scss
src/: app.rs  components.rs  main.rs
src/components/: fetch_err.rs  header.rs  home.rs  not_found.rs
src/models/: dream.rs  form.rs  mod.rs  request.rs  response.rs  state.rs  user.rs  video.rs
src/models/request/: dream.rs  dream_add.rs  dream_delete.rs  dream_edit.rs  form.rs  mod.rs
src/models/response/: dream.rs  dreams.rs  form.rs  user.rs
src/pages/: dream.rs  home.rs  login.rs  mod.rs  user.rs
src/pages/auth/: login.rs  register.rs
src/pages/dream/: add.rs  dream_add.rs  dream_edit.rs  dream_show.rs  edit.rs  mod.rs  show.rs
src/request/: request.rs  state.rs
src/router/: route.rs
src/service/: request.rs
