[package]
name = "Misoten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
stdweb = "0.4.20"
js-sys = "0.3.60"
web-sys = "0.3.58"
reqwasm = "0.5.0"
lipsum = "0.8.2"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }
serde_json = "1.0.81"
serde = {version = "1.0.37", features = ["derive"]}
once_cell = "1"
gloo = "0.8"
gloo-storage = "0.2.2"
getrandom = { version = "0.2", features = ["js"] }
reqwest = "0.11.12"