[package]
name = "Misoten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
js-sys = "0.3.60"
web-sys = "0.3.58"
stdweb = "0.4.20"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"
serde = {version = "1.0.37", features = ["derive"]}
serde_json = "1.0.81"
gloo = "0.8"
gloo-storage = "0.2.2"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }
# once_cell = "1"